# calibration_various_sensors

./: .gitignore  README.md
calibration/: CMakeLists.txt  extract_indices  package.xml
calibration/config/: detector_params.yaml
calibration/include/: calibration_core.hpp  disp_masker.hpp  laser2cam_calibration.hpp  laser2cam_utils.h  lidar_pattern.hpp  mono_qr_pattern.hpp  overlay_image.hpp  plane.hpp  sngs_calibration.hpp  stereo_pattern.hpp  velo2cam_utils.h
calibration/include/composition/: extract_indices_component.hpp  passthrough_component.hpp  pcl_node.hpp  transforms.h
calibration/launch/: calibration.launch.py  composition_demo.launch.py  lidar_pattern.launch  lidar_pattern.launch.py  lidar_pattern_sim.launch.py  mono_pattern.launch  mono_pattern.launch.py  mono_pattern_sim.launch.py  registration.launch  registration.launch.py  stereo_pattern.launch  stereo_pattern.launch.py  stereo_pattern_sim.launch.py
calibration/msg/: CircleCentroids.msg  SensorPair.msg
calibration/src/: calibration_core.cpp  detect_board.cpp  disp_masker.cpp  extract_indices_component.cpp  laser2cam_calibration.cpp  lidar_pattern.cpp  manual_composition.cpp  mono_qr_pattern.cpp  overlay_image.cpp  passthrough_component.cpp  plane.cpp  sick2cam_calibration.cpp  sngs_calibration.cpp  stereo_pattern.cpp  test.cpp  test2.cpp  velo2cam_calibration.cpp
calibration_interfaces/: CMakeLists.txt  package.xml
calibration_interfaces/msg/: Lidar.msg  Monocamera.msg  SensorPair.msg  Stereocamera.msg
