<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calibration</name>
  <version>1.0.1</version>
  <description>The velo2cam_calibration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="nizam.gifary@stud.uni-due.de">nizamgifary</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv2</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <url type="website">http://wiki.ros.org/velo2cam_calibration</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="jbeltran@ing.uc3m.es">Jorge Beltran</author>
  <author email="cguindel@ing.uc3m.es">Carlos Guindel</author>
  <author email="nizam.gifary@stud.uni-due.de">Carlos Guindel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>pcl_ros</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tinyxml_vendor</depend>
  <depend>tinyxml2_vendor</depend>
  <depend>rcl_interfaces</depend>
  <depend>calibration_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
